[project]
name = "slama-dev-hugo"
version = "0.1.0"
description = "Scripts for slama.dev Hugo site"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "svgwrite>=1.4.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "ruff>=0.8.6",
]

[tool.ruff]
extend-exclude = ["content/"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
