[project]
name = "slama-dev-hugo"
version = "0.1.0"
description = "Scripts for slama.dev Hugo site"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "deface>=1.5.0",
    "fonttools>=4.38.0",
    "lxml>=5.0.0",
    "markdown>=3.10",
    "onnx>=1.22.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "svgwrite>=1.4.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "ruff>=0.8.6",
]
# Optional GPU acceleration for deface. Without it, deface runs on CPU.
# Install with `uv sync --group gpu`.
gpu = [
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.23.0.39",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-curand-cu12>=10.3.10.19",
    "onnxruntime-gpu>=1.26.0",
]

[tool.ruff]
extend-exclude = ["content/"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
